# PLSA-Base

./: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  config.h.in  configure  configure.ac  debug.c  debug.h  em-estep.c  em-estep.h  em-mstep.c  em-mstep.h  input.c  input.h  main.c  output.c  output.h  parameters.c  parameters.h  plsa-defn.h  run.c  run.h  wmalloc.c  wmalloc.h
example/: test.cooccur
