##  Source flags
bin_PROGRAMS = plsa
plsa_SOURCES = \
  plsa-defn.h \
  em-estep.h \
  em-estep.c \
  em-mstep.h \
  em-mstep.c \
  input.h \
  output.h \
  wmalloc.h \
  input.c \
  main.c \
  output.c \
  wmalloc.c \
  run.h \
  run.c \
  parameters.h \
  parameters.c \
  debug.h \
  debug.c
plsa_LDADD = -lm

dist_doc_DATA = AUTHORS COPYING ChangeLog INSTALL NEWS README VERSION \
                docs/manual.pdf
